fix makefile to match new VG (hope, right this time)
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@2226 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/tsan/Makefile
+++ b/tsan/Makefile
@@ -75,7 +75,7 @@ endif
 
 ifeq ($(OS), linux)
   PIN_CXXFLAGS=$(PIN_CXXFLAGS_L)
-  VG_LD_FLAGS=-static -nodefaultlibs -nostartfiles -Wl,-Ttext=0x38000000
+  VG_LD_FLAGS=-Wl,--build-id=none  -Wl,-Ttext=0x38000000  -static -nodefaultlibs -nostartfiles -u _start 
   VG_LD_PRELOAD_FLAGS= -nodefaultlibs -shared -Wl,-z,interpose,-z,initfirst
   DR_OS=LINUX
 else ifeq ($(OS), darwin)
