--- a/buildbot/master.cfg
+++ b/buildbot/master.cfg
@@ -57,6 +57,7 @@ import builder_valgrind
 import builder_linux_build
 import builder_windows_build
 import builder_wine
+import builder_jtsan
 
 c['builders'] = []
 
@@ -69,7 +70,8 @@ for module in [builder_valgrind,
                builder_mac,
                builder_experimental,
                builder_windows_build,
-               builder_wine]:
+               builder_wine,
+               builder_jtsan]:
   reload(module)
   c['builders'].extend(module.generate(settings))
 
@@ -82,7 +84,8 @@ from buildbot.scheduler import Periodic
 
 commonBuilderNames = ['buildbot-winxp',
                       'buildbot-vista',
-                      'buildbot-mac']
+                      'buildbot-mac',
+                      'buildbot-jtsan']
 dependentBuilderNames = ['buildbot-experimental',
                          'buildbot-linux',
                          'buildbot-linux-small',
@@ -146,4 +149,4 @@ c['status'].append(html.WebStatus(http_port=8011,allowForce=True))
 
 c['projectName'] = 'ThreadSanitizer'
 c['projectURL'] = 'http://code.google.com/p/data-race-test'
-c['buildbotURL'] = 'http://kcc-box.eem:8010/waterfall'
+c['buildbotURL'] = 'http://build.chromium.org/buildbot/tsan/waterfall'
