Add all passed tests to test-set in Makefile
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@2326 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/jtsan/Makefile
+++ b/jtsan/Makefile
@@ -1,6 +1,11 @@
 # Pass the correct path to MTRAT.
 MTRAT=mtrat
-TESTS=testNegative1 testNegative2
+TESTS=-testPositive_WW_HashSetAccessNoLocks \
+      -testPositive_WW_LockInBetween \
+      -testNegative_CountDownLatch \
+      -testNegative_CyclicBarrier \
+      -testNegative_ReadWriteLock_TryLock \
+      -testNegative_Semaphore
 
 JTSAN_ROOT=../third_party/java-thread-sanitizer/dist
 JTSAN_LOGFILE=jtsan.events
