Add cat jtsan.events if error happens (only for jtsan-buildbot)
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@2332 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/jtsan/Makefile
+++ b/jtsan/Makefile
@@ -2,10 +2,9 @@
 MTRAT=mtrat
 TESTS=-testPositive_WW_HashSetAccessNoLocks \
       -testPositive_WW_LockInBetween \
-      -testNegative_CountDownLatch \
       -testNegative_CyclicBarrier \
       -testNegative_ReadWriteLock_TryLock \
-      -testNegative_Semaphore
+      -testNegative_CountDownLatch
 
 JTSAN_ROOT=../third_party/java-thread-sanitizer/dist
 JTSAN_LOGFILE=jtsan.events
@@ -25,8 +24,8 @@ mtrat: ThreadSanitizerTest.class
 # Run tests under ThreadSanitizer
 tsan: ThreadSanitizerTest.class
 	./jtsan.sh ThreadSanitizerTest ${TESTS} \
-	&& ../tsan/bin/amd64-linux-debug-ts_offline --error_exitcode=1 <${JTSAN_LOGFILE}
-
+	&& ../tsan/bin/amd64-linux-debug-ts_offline --error_exitcode=1 <${JTSAN_LOGFILE} \
+	|| (echo '========================================' && cat ${JTSAN_LOGFILE})
 # Clean
 clean:
 	rm -fr *.class bin dist *log
