--- a/tsan/Makefile
+++ b/tsan/Makefile
@@ -22,6 +22,8 @@ CXXOPT=-O2
 CXXFLAGS=$(CXXOPT) -g -Wall  -Wno-deprecated -fno-exceptions # -Wvla
 LDFLAGS=
 
+OFFLINE_DEFINES=-DTS_OFFLINE=1
+
 VG_CXXFLAGS=-fno-rtti -fno-stack-protector
 VG_DEFINES=-DVGA_$(ARCH)=1 -DVGO_$(OS)=1 -DVGP_$(ARCH_OS)=1 -D_STLP_NO_IOSTREAMS=1 -DTS_VALGRIND=1
 VG_INCLUDES=-I$(VALGRIND_ROOT) -I$(VALGRIND_ROOT)/include -I$(VALGRIND_ROOT)/VEX/pub -I$(STLPORT_ROOT)
@@ -47,6 +49,7 @@ ARCH_OS=$(ARCH)_$(OS)
 
 # prefix of binary files
 P=$(OUTDIR)/$(ARCHOS)$(D)-
+OFF=$(P)off-
 VGP=$(P)vg-
 PINP=$(P)pin-
 DRP=$(P)dr-
@@ -194,7 +197,6 @@ endif
 
 ifeq ($(OFFLINE), 1)
 TS_offline: $(P)ts_offline$(EXE)
-DEFINES+=-DTS_OFFLINE=1
 else
 TS_offline:
 endif
@@ -224,11 +226,14 @@ TS_VG_HEADERS=ts_valgrind.h ts_valgrind_client_requests.h
 
 TS_VG_OBJECTS=$(VGP)thread_sanitizer.o $(VGP)ts_valgrind.o $(VGP)ts_valgrind_libc.o $(VGP)ts_util.o $(VGP)suppressions.o
 TS_PIN_OBJECTS=$(PINP)ts_pin.$(OBJ) $(PINP)ts_util.$(OBJ) $(PINP)thread_sanitizer.$(OBJ) $(PINP)suppressions.$(OBJ) $(PINP)ts_race_verifier.$(OBJ)
-TS_OFFLINE_OBJECTS=$(P)ts_offline.$(OBJ) $(P)thread_sanitizer.$(OBJ) $(P)ts_util.$(OBJ) $(P)suppressions.$(OBJ)
+TS_OFFLINE_OBJECTS=$(OFF)ts_offline.$(OBJ) $(OFF)thread_sanitizer.$(OBJ) $(OFF)ts_util.$(OBJ) $(OFF)suppressions.$(OBJ)
 TS_DR_OBJECTS=$(DRP)ts_dynamorio.$(OBJ) $(DRP)ts_util.$(OBJ)
 
 $(P)%.$(OBJ): %.cc $(TS_HEADERS) | $(OUTDIR)
 	$(CXX) $(CXXFLAGS) $(ARCHFLAGS) $(O)$@ -c $< $(DEFINES)
+
+$(OFF)%.o: %.cc $(TS_HEADERS) | $(OUTDIR)
+	$(CXX) $(CXXFLAGS) $(ARCHFLAGS) $(OFFLINE_DEFINES) $(O)$@ -c $< $(DEFINES)
 
 $(VGP)%.o: %.cc $(TS_HEADERS) $(TS_VG_HEADERS) | $(OUTDIR)
 	$(CXX) $(CXXFLAGS) $(VG_CXXFLAGS) $(ARCHFLAGS) $(VG_INCLUDES) $(VG_DEFINES) -o $@ -c $< $(DEFINES)
