Correct error code in buildbot
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@2356 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/jtsan/Makefile
+++ b/jtsan/Makefile
@@ -25,7 +25,7 @@ mtrat: ThreadSanitizerTest.class
 tsan: ThreadSanitizerTest.class
 	./jtsan.sh ThreadSanitizerTest ${TESTS} \
 	&& ../tsan/bin/amd64-linux-debug-ts_offline --error_exitcode=1 <${JTSAN_LOGFILE} \
-	|| (echo '========================================' && cat ${JTSAN_LOGFILE})
+	|| (echo '========================================' && cat ${JTSAN_LOGFILE} && exit 1)
 # Clean
 clean:
 	rm -fr *.class bin dist *log
