Remove semaphore test from Target tests
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@2363 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/jtsan/Makefile
+++ b/jtsan/Makefile
@@ -4,7 +4,8 @@ TESTS=-testPositive_WW_HashSetAccessNoLocks \
       -testPositive_WW_LockInBetween \
       -testNegative_CyclicBarrier \
       -testNegative_ReadWriteLock_TryLock \
-      -testNegative_CountDownLatch
+      -testNegative_CountDownLatch \
+      -testNegative_Semaphore
 
 JTSAN_ROOT=../third_party/java-thread-sanitizer/dist
 JTSAN_LOGFILE=jtsan.events
@@ -24,8 +25,14 @@ mtrat: ThreadSanitizerTest.class
 # Run tests under ThreadSanitizer
 tsan: ThreadSanitizerTest.class
 	./jtsan.sh ThreadSanitizerTest ${TESTS} \
+	&& ../tsan/bin/amd64-linux-debug-ts_offline <${JTSAN_LOGFILE}
+
+# Run tests under ThreadSanitizer on build-bot
+buildbot: ThreadSanitizerTest.class
+	./jtsan.sh ThreadSanitizerTest ${TESTS} \
 	&& ../tsan/bin/amd64-linux-debug-ts_offline --error_exitcode=1 <${JTSAN_LOGFILE} \
 	|| (echo '========================================' && cat ${JTSAN_LOGFILE} && exit 1)
+
 # Clean
 clean:
 	rm -fr *.class bin dist *log
