remove one more test
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@2372 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/jtsan/Makefile
+++ b/jtsan/Makefile
@@ -2,6 +2,7 @@
 MTRAT=mtrat
 TESTS=-testPositive_WW_HashSetAccessNoLocks \
       -testPositive_WW_LockInBetween \
+      -testPositive_WritingUnderReaderLock \
       -testNegative_CyclicBarrier \
       -testNegative_ReadWriteLock_TryLock \
       -testNegative_CountDownLatch \
