Fix an error in jstan_red builder and add it to the waterfall
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@2390 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/buildbot/master.cfg
+++ b/buildbot/master.cfg
@@ -58,6 +58,7 @@ import builder_linux_build
 import builder_windows_build
 import builder_wine
 import builder_jtsan
+import builder_jtsan_red
 
 c['builders'] = []
 
@@ -71,7 +72,8 @@ for module in [builder_valgrind,
                builder_experimental,
                builder_windows_build,
                builder_wine,
-               builder_jtsan]:
+               builder_jtsan,
+               builder_jtsan_red]:
   reload(module)
   c['builders'].extend(module.generate(settings))
 
@@ -85,7 +87,8 @@ from buildbot.scheduler import Periodic
 commonBuilderNames = ['buildbot-winxp',
                       'buildbot-vista',
                       'buildbot-mac',
-                      'buildbot-jtsan']
+                      'buildbot-jtsan',
+                      'buildbot-jtsan-red']
 dependentBuilderNames = ['buildbot-experimental',
                          'buildbot-linux',
                          'buildbot-linux-small',
