fix problems with old bot
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@2391 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/jtsan/Makefile
+++ b/jtsan/Makefile
@@ -12,8 +12,8 @@ JTSAN_ROOT=../third_party/java-thread-sanitizer/dist
 JTSAN_LOGFILE=jtsan.events
 
 # Build the unittests.
-ThreadSanitizerTest.class: ThreadSanitizerTest.java RaceDetectorApi.java
-	javac $^
+ThreadSanitizerTest.class: ThreadSanitizerTest.java
+	javac -cp ../third_party/java-thread-sanitizer/dist/agent.jar $^
 
 # Run the unittests natively.
 run: ThreadSanitizerTest.class
