Add m32 and m64 targets for the unittest
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@2393 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/unittest/Makefile
+++ b/unittest/Makefile
@@ -55,8 +55,11 @@ run_output_tests: output_tests
 
 w:
 	$(MAKE) all OS=windows ARCH=x86
-m:
+m: m32 m64
+m32:
 	$(MAKE) all OS=darwin ARCH=x86
+m64:
+	$(MAKE) all OS=darwin ARCH=amd64
 l: l32 l64
 l32:
 	$(MAKE) all OS=linux ARCH=x86
