Add a jtsan repo as another changesource for the buildbot.
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@2435 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/buildbot/master.cfg
+++ b/buildbot/master.cfg
@@ -28,7 +28,8 @@ c['slavePortnum'] = 9989
 ####### CHANGESOURCES
 
 settings = {
-    'svnurl':  'http://data-race-test.googlecode.com/svn/trunk'
+    'svnurl':  'http://data-race-test.googlecode.com/svn/trunk',
+    'svnurl2':  'http://java-thread-sanitizer.googlecode.com/svn/trunk/'
 }
 
 from buildbot.changes.svnpoller import SVNPoller
@@ -37,7 +38,13 @@ svn_poller = SVNPoller(
                    pollinterval=60, # seconds
                    histmax=10,
                    svnbin='/usr/bin/svn')
-c['sources'] = [ svn_poller ]
+
+svn_poller2 = SVNPoller(
+                   svnurl=settings['svnurl2'],
+                   pollinterval=60, # seconds
+                   histmax=10,
+                   svnbin='/usr/bin/svn')
+c['sources'] = [ svn_poller, svn_poller2 ]
 
 
 
