--- a/unittest/Makefile
+++ b/unittest/Makefile
@@ -79,7 +79,10 @@ DYNAMIC_ANNOTATIONS=${DYNAMIC_ANNOTATIONS_C} ${DYNAMIC_ANNOTATIONS_H}
 
 TEST_UTILS_O=$(BIN)test_utils-$(BUILD).$(OBJ)
 
-$(BIN)racecheck_unittest-$(BUILD)$(EXE): $(BIN)racecheck_unittest-$(BUILD).$(OBJ) $(BIN)old_test_suite-$(BUILD).$(OBJ) $(BIN)opt_tests-$(BUILD).$(OBJ) \
+$(BIN)racecheck_unittest-$(BUILD)$(EXE): $(BIN)racecheck_unittest-$(BUILD).$(OBJ) \
+	                                 $(BIN)old_test_suite-$(BUILD).$(OBJ) \
+					 $(BIN)opt_tests-$(BUILD).$(OBJ) \
+					 $(BIN)atomicity_tests-$(BUILD).$(OBJ) \
 		$(TEST_UTILS_O) $(GTEST_LIB)  ${DYNAMIC_ANNOTATIONS_O} | bin
 	${LD} ${LDFLAGS} $^ $(LIBS) $(LINKO)$@
 
