--- a/buildbot/master.cfg
+++ b/buildbot/master.cfg
@@ -29,7 +29,6 @@ c['slavePortnum'] = 9989
 
 settings = {
     'svnurl':  'http://data-race-test.googlecode.com/svn/trunk',
-    'svnurl2':  'http://java-thread-sanitizer.googlecode.com/svn/trunk/'
 }
 
 from buildbot.changes.svnpoller import SVNPoller
@@ -39,12 +38,7 @@ svn_poller = SVNPoller(
                    histmax=10,
                    svnbin='/usr/bin/svn')
 
-svn_poller2 = SVNPoller(
-                   svnurl=settings['svnurl2'],
-                   pollinterval=60, # seconds
-                   histmax=10,
-                   svnbin='/usr/bin/svn')
-c['sources'] = [ svn_poller, svn_poller2 ]
+c['sources'] = [ svn_poller ]
 
 
 
