Partly use the original headers from tsan/ to build the RTL.
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@2471 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/llvm/tsan_rtl/Makefile
+++ b/llvm/tsan_rtl/Makefile
@@ -5,11 +5,15 @@ SRC=tsan_rtl.cc
 ERRORLVL=-Werror
 ERRORLVL=-Werror -Wno-deprecated
 OBJS32=x86-thread_sanitizer.o x86-ts_util.o x86-suppressions.o
-FLAGS=-Istlport -I../../third_party/stlport -DTS_LLVM -fno-exceptions -g -D_STLP_NO_IOSTREAMS=1
+TSAN_PATH=../../tsan
+FLAGS=-Istlport -I../../third_party/stlport -I$(TSAN_PATH) -DTS_LLVM -fno-exceptions -g -D_STLP_NO_IOSTREAMS=1
 
-TS_HEADERS=thread_sanitizer.h ts_util.h suppressions.h ts_replace.h ts_heap_info.h \
-           ts_simple_cache.h ts_stats.h ts_lock.h ts_events.h ts_event_names.h \
-           ts_trace_info.h #ts_literace.h ts_race_verifier.h
+FOREIGN_HEADERS=$(TSAN_PATH)/ts_lock.h $(TSAN_PATH)/ts_stats.h \
+                $(TSAN_PATH)/ts_heap_info.h $(TSAN_PATH)/ts_trace_info.h \
+		$(TSAN_PATH)/ts_simple_cache.h $(TSAN_PATH)/ts_replace.h
+
+TS_HEADERS=thread_sanitizer.h ts_util.h \
+           ts_event_names.h ts_events.h suppressions.h
 
 RTL_32_O=tsan_rtl32.o
 
@@ -20,8 +24,8 @@ all:	$(OBJS32) $(RTL_32_O)
 tsan_rtl32.o: $(SRC) tsan_rtl.h
 	$(CXX) $(SRC) $(FLAGS) -m32 -g $(ERRORLVL) -Wall -c -o $(RTL_32_O)
 
-x86-%.o:	%.cc $(TS_HEADERS)
+x86-%.o:	%.cc $(TS_HEADERS) $(FOREIGN_HEADERS)
 	$(CXX) -m32 -o $@ -c $< $(ERRORLVL) $(FLAGS)
 
 clean:
-	rm *.o *.a
+	rm -f *.o *.a
