Do not report unused functions building the RTL
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@2507 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/llvm/tsan_rtl/Makefile
+++ b/llvm/tsan_rtl/Makefile
@@ -3,7 +3,7 @@ AR=ar cru
 RANLIB=ranlib
 SRC=tsan_rtl.cc
 ERRORLVL=-Werror
-ERRORLVL=-Werror -Wno-deprecated
+ERRORLVL=-Werror -Wno-deprecated -Wno-unused-function
 OBJS32=x86-thread_sanitizer.o x86-ts_util.o x86-suppressions.o
 TSAN_PATH=../../tsan
 FLAGS=-I. -Istlport -I../../third_party/stlport -I$(TSAN_PATH) \
