This CL contains several somewhat related features:
 -- USE_SPINLOCK macro switches between pthreadmutex and pthread spinlock as
 the global lock. Unfortunately spinlocks can't be used together with condvars,
 so this is temporarily disabled (although may bring a performance gain)
 -- Use a non-recursive entity for the global lock. GIL is still recursive,
 this is done using a depth counter.
 -- BLOCK_SIGNALS macro enables blocking the signals any time the global lock
 is taken. This brings huge overhead to the lock and looks unnecessary now,
 because our signal handler can run even under the global lock.
 -- Initial support for signals. Each user signal handler is stored in
 signal_actions[] and RTLSignalHandler is installed instead. When a signal is
 received, it is put into a thread-local array of pending signals (see the
 comments in RTLSignalHandler). Each time we're about to release the global
 lock, we handle all the pending signals.


git-svn-id: http://data-race-test.googlecode.com/svn/trunk@2523 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/llvm/tsan_rtl/Makefile
+++ b/llvm/tsan_rtl/Makefile
@@ -7,7 +7,7 @@ ERRORLVL=-Werror -Wno-deprecated -Wno-unused-function
 OBJS32=x86-thread_sanitizer.o x86-ts_util.o x86-suppressions.o
 TSAN_PATH=../../tsan
 FLAGS=-I. -Istlport -I../../third_party/stlport -I$(TSAN_PATH) \
-      -fno-exceptions -g \
+      -fno-exceptions -g -O0 \
       -D_STLP_NO_IOSTREAMS=1 -DTS_LLVM \
       -DDYNAMIC_ANNOTATIONS_WANT_ATTRIBUTE_WEAK
 
