Support adding arbitrary suffix to unittest binary name.
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@2552 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/unittest/Makefile
+++ b/unittest/Makefile
@@ -20,7 +20,7 @@ endif
 # ARCH= x86, amd64
 # OX = O0, O1, ...
 # S= <empty>, -static
-BUILD=${OS}-${ARCH}-${OX}${S}
+BUILD=${OS}-${ARCH}-${OX}${S}${EXTRA_BUILD_SUFFIX}
 BIN=bin/
 
 ifeq ($(OS), linux)
