Hieuristic function for obtaining thread stack address and size. Unused yet, should be used if pthread_getattr_np() is unavailable.
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@2562 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/llvm/tsan_rtl/Makefile
+++ b/llvm/tsan_rtl/Makefile
@@ -35,6 +35,12 @@ $(TSAN_PATH)/ts_event_names.h:
 tsan_rtl32.o: $(SRC) tsan_rtl.h
 	$(CXX) $(SRC) $(FLAGS) -m32 -g $(ERRORLVL) -Wall -c -o $(RTL_32_O)
 
+x86-stack_info.o:	stack_info.cc stack_info.h
+	$(CXX) -m32 -o $@ -c $< $(ERRORLVL) $(FLAGS) -USTACKINFO_STANDALONE
+
+stack_info32:	stack_info.cc stack_info.h
+	$(CXX) -m32 -o $@ $< $(ERRORLVL) $(FLAGS) -DSTACKINFO_STANDALONE -lpthread
+
 x86-%.o:	%.cc $(TS_HEADERS) $(FOREIGN_HEADERS)
 	$(CXX) -m32 -o $@ -c $< $(ERRORLVL) $(FLAGS)
 
