Initial debug info reader. We map the binary currently being executed, search for tsan_rtl_debug_info section and parse it. This is done iff the debug info is not supplied via TSAN_DBG_INFO env var.
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@2703 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/llvm/tsan_rtl/Makefile
+++ b/llvm/tsan_rtl/Makefile
@@ -42,8 +42,8 @@ RTL_32_O=tsan_rtl32.o
 RTL_64_O=tsan_rtl64.o
 
 all:	$(OBJS32) $(OBJS64) $(RTL_32_O) $(RTL_64_O)
-	$(AR) tsan_rtl32.a $(OBJS32) $(RTL_32_O)
-	$(RANLIB) tsan_rtl32.a
+#	$(AR) tsan_rtl32.a $(OBJS32) $(RTL_32_O)
+#	$(RANLIB) tsan_rtl32.a
 	$(AR) tsan_rtl64.a $(OBJS64) $(RTL_64_O)
 	$(RANLIB) tsan_rtl64.a
 
